[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "algorithms"
version = "0.1"
description = "Some algorithms implementation"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    # List your dependencies here, e.g., "numpy>=1.19.0"
]

[tool.setuptools.packages.find]
where = ["src"]

